# Rust

./: Cargo.toml
src/: Function.rs  Ownership.rs  Struct.rs  data.rs  dummy.rs  main.rs
src/data/: datatypes.rs  function.rs  name.rs  shadow.rs  traits.rs
src/server/: dd.rs  mairu.rs  new.rs
