[package]
name = "Rust"
version = "0.1.0"
edition = "2021"
default-run = "Ownership" 

[dependencies]

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "Function"
path = "src/Function.rs"

[[bin]]
name = "Ownership"
path = "src/Ownership.rs"

[[bin]]
name = "Struct"
path = "src/Struct.rs"

[[bin]]
name = "dummy"
path = "src/dummy.rs"

[[bin]]
name = "datatypes"
path = "src/data/datatypes.rs"

[[bin]]
name = "dd"
path = "src/server/dd.rs"

[[bin]]
name = "mairu"
path = "src/server/mairu.rs"

[[bin]]
name = "function"
path = "src/data/function.rs"

[[bin]]
name = "shadow"
path = "src/data/shadow.rs"

[[bin]]
name = "traits"
path = "src/data/traits.rs"


[[bin]]
name = "name"
path = "src/data/name.rs"

[[bin]]
name = "new"
path = "src/server/new.rs"
